# FractalTrader

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  .pre-commit-config.yaml  AI_DEVELOPMENT.md  BRIDGE_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.aws  Dockerfile.cloud  FraktalnyHandlarz.md  HAIKU_CODE_EXAMPLES.md  HAIKU_TASK_1_DATA_LAYER.md  MIGRATION_CONTEXT.md  MIGRATION_PLAN.md  Makefile  QUICK_START_GUIDE.md  README.md  YOUR_IPHONE_SETUP.md  bot-autostart.sh  claude.md  deployment.md  docker-compose.aws.yml  docker-compose.cloud.yml  docker-compose.yml  docker-start.sh  fractal-trader-context.md  haiku_tasks.md  pyproject.toml  quick_start.md  requirements.txt  setup.py  testing_strategy.md
.claude/: project-context.md  settings.local.json
.github/: PROJECT_BOARD.md  labels.md
.github/ISSUE_TEMPLATE/: feature-idea.md  implementation-task.md  research-task.md  sprint-planning.md
.github/workflows/: ci.yml
backtesting/: __init__.py  runner.py
core/: __init__.py  imbalance.py  liquidity.py  market_structure.py  order_blocks.py
data/: __init__.py  ccxt_fetcher.py  fetcher.py  hyperliquid_fetcher.py
deploy/: AWS_DEPLOYMENT.md  AWS_QUICK_START.md  CLOUD_DEPLOYMENT.md  README.md  REMOTE_DEV.md  aws-remote.env.example  aws-remote.sh  aws-setup.sh  health-check.sh  iphone-deployment-guide.md  oracle-cloud-setup.sh  quick-deploy.sh
docs/: CRITICAL_HARDENING_SUMMARY.md  CURRENTRUN.md  DASHBOARD.md  DECISION_LOG_CIRCUIT_BREAKER_FIX.md  GITHUB_SETUP_INSTRUCTIONS.md  ISSUES.md  OPUS_RECOMMENDATION.md  OPUS_SPRINT4_BRIEF.md  ORGANIZATIONAL_OVERHAUL_SUMMARY.md  README.md  ROADMAP_Q1_2025.md  ROADMAP_Q1_2026.md  SECURITY.md  SPRINT4_IMPLEMENTATION_GUIDE.md  SPRINT_3_REPORT.md  SPRINT_4_PLAN.md  SPRINT_4_SUMMARY.md  SPRINT_FRAMEWORK.md  START_HERE_OPUS.md  WORKFLOW.md  ai-development.md
docs-archive/: DEPLOYMENT_PLAN.md  HAIKU_TASK_2_LIVE_TRADING.md
docs/archive/: FILIP_QUICKSTART.md  PHASE_1_PROGRESS.md  (+3 more)
examples/: live_trading_example.py
fractal_mcp/: README.md  config.py  server.py
live/: __init__.py  cli.py  dashboard.py  logging_config.py  reporting.py  state_manager.py
mcp/: README.md  __init__.py  server.py
notebooks/: .live_dashboard.ipynb.layout  README.md  alert_system.py  fractal_viewer.ipynb  live_dashboard.ipynb  live_data_stream.py  setup_detector.py
risk/: __init__.py  confidence.py  position_sizing.py
strategies/: base.py  bos_orderblock.py  fvg_fill.py  liquidity_sweep.py
tests/: TODO_TESTS.md  test_alert_system.py  test_backtesting.py  test_data_fetchers.py  test_imbalance.py  test_liquidity.py  test_live_stream.py  test_live_trading.py  test_market_structure.py  test_order_blocks.py  test_risk.py  test_state_manager.py  test_strategies.py  test_visualization.py
visualization/: __init__.py  fractal_dashboard.py
(+32 files in other folders)
